Compactibility for legacy browsers

--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,9 @@
             "scripts": []
           },
           "configurations": {
+            "es5": {
+              "tsConfig": "./tsconfig.es5.json"
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -66,6 +69,9 @@
             "browserTarget": "portfolio-management:build"
           },
           "configurations": {
+            "es5": {
+              "browserTarget": "portfolio-management:build:es5"
+            },
             "production": {
               "browserTarget": "portfolio-management:build:production"
             }
