--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@coreui/coreui": "^2.1.12",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
+    "angular-svg-icon": "^8.0.0",
     "bootstrap": "^4.3.1",
+    "classlist.js": "^1.1.20150312",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^5.1.1",
-    "classlist.js": "^1.1.20150312",
     "rxjs": "~6.5.3",
     "simple-line-icons": "^2.4.1",
     "tslib": "^1.10.0",
