--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
     "bootstrap": "^4.3.1",
-    "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^5.1.1",
+    "chart.js": "^2.8.0",
     "classlist.js": "^1.1.20150312",
+    "font-awesome": "^4.7.0",
+    "ng2-charts": "^2.3.0",
+    "ng2-charts-x": "^2.0.6",
+    "ngx-bootstrap": "^5.1.1",
     "rxjs": "~6.5.3",
     "simple-line-icons": "^2.4.1",
     "tslib": "^1.10.0",
