--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.4",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
     "@angular/core": "~8.2.4",
     "@angular/forms": "~8.2.4",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
@@ -26,6 +28,7 @@
     "chart.js": "^2.8.0",
     "classlist.js": "^1.1.20150312",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.0",
     "ng2-charts-x": "^2.0.6",
     "ngx-bootstrap": "^5.1.1",
