--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/simple-line-icons/css/simple-line-icons.css",
+              "node_modules/flag-icon-css/css/flag-icon.min.css",
               "src/styles.css"
             ],
             "scripts": []
