--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "classlist.js": "^1.1.20150312",
+    "flag-icon-css": "^3.4.5",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.0",
