--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@coreui/coreui": "^2.1.12",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
+    "@ng-idle/core": "^8.0.0-beta.4",
+    "@ng-idle/keepalive": "^8.0.0-beta.4",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "classlist.js": "^1.1.20150312",
